# Assiut-University-Training-Newcomers

./: CMakeLists.txt  README.md
01 Sheet #1 (Data type - Conditions)/: A. SayHelloWithCpp.cpp  B. BasicDataTypes.cpp  C. SimpleCalculator.cpp  D. Difference.cpp  E. AreaofaCircle.cpp  F. DigitsSummation.cpp  G. Summationfrom1toN.cpp  H. Twonumbers.cpp  J. Multiples.cpp  K. MaxandMin.cpp  L. TheBrothers.cpp  M. CapitalorSmallorDigit.cpp  N. Char.cpp  O. Calculator.cpp  P. Firstdigit!.cpp  Q. CoordinatesofaPoint.cpp  R. AgeinDays.cpp  README.md  S. Interval.cpp  T. SortNumbers.cpp  U. Floatorint.cpp  V. Comparison.cpp  W. MathematicalExpression.cpp  X. Twointervals.cpp  Y. Thelast2digits.cpp  Z. HardCompare.cpp
02 Contest #1/: A. Winter Sale.cpp  B. Memo and Momo.cpp  C. Next Alphabet.cpp  D. Ali Baba and Puzzles.cpp  E. Interval Sweep.cpp  F. Adding Bits.cpp  G. Katryoshka.cpp  H. Data Type Guessing.cpp  I. Lucky Numbers.cpp
03 Sheet #2 (Loops)/: A. 1toN.cpp  B. EvenNumbers.cpp  C. Even,Odd,PositiveandNegative.cpp  D. FixedPassword.cpp  E. Max.cpp  F. Multiplicationtable.cpp  G. Factorial.cpp  H. OnePrime.cpp  I. Palindrome.cpp  J. Primesfrom1ton.cpp  K. Divisors.cpp  L. GCD.cpp  M. LuckyNumbers1.cpp  N. NumbersHistogram.cpp  O. Pyramid.cpp  P. Shape1.cpp  R. SequenceofNumbersandSum.cpp  README.md  S. SumofConsecutiveOddNumbers.cpp  T. Shape2.cpp  U. SomeSums.cpp  V. PUM.cpp  W. Shape3.cpp  X. ConvertToDecimal2.cpp  Y. EasyFibonacci.cpp  Z. ThreeNumbers.cpp
04 Contest #2/: A. TimonandPumbaa.cpp  B. DrawingX.cpp  C. FindingMinimums.cpp  D. RangeSum.cpp  E. HadyRidestheTrain.cpp  F. BreakNumber.cpp  G. ConstructtheSum.cpp  H. SimpleMod.cpp
05 Sheet #3 (Arrays)/: A. Summation.cpp  B. Searching.cpp  C. Replacement.cpp  D. PositionsInArray.cpp  E. LowestNumber.cpp  F. Reversing.cpp  G. PalindromeArray.cpp  H. Sorting.cpp  I. SmallestPair.cpp  J. LuckyArray.cpp  K. SumDigits.cpp  L. MaxSubarray.cpp  M. ReplaceMinMax.cpp  N. CheckCode.cpp  O. Fibonacci.cpp  P. MinimizeNumber.cpp  Q. CountSubarrays.cpp  R. Permutationwitharrays.cpp  S. SearchInMatrix.cpp  T. Matrix.cpp  U. IsbasubseqfromA.cpp  V. FrequencyArray.cpp  W. MirrorArray.cpp  X. 8Neighbors.cpp  Y. Rangeumquery.cpp  Z. BinarySearch.cpp
06 Contest #3/: A. Square or rectangle.cp  C. Choose Elements.cpp  D. Counting Elements.cpp  E. AlternatingArray.cpp  F. Front - End.cpp  G. Even Hate Odd.cpp
07 Sheet #4 (Strings)/: A. CreateANewString.cpp  B. Let'suseGetline.cpp  C. Compare.cpp  D. Strings.cpp  E. Count.cpp  F. WayTooLongWords.cpp  G. Conversion.cpp  H. GoodOrBad.cpp  I. Palindrome.cpp  J. CountLetters.cpp  K. ILovestrings.cpp  L. StringFunctions.cpp  M. SubsequenceString.cpp  N. MaxSubsequence.cpp  O. SortString.cpp  P. CountWords.cpp  Q. ReverseWords.cpp  R. StrringScore.cpp  README.md  S. MaxSplit.cpp  T. URL.cpp  U. NewWords.cpp  V. ReplaceWord.cpp  W. Encrypt-DecryptMessage.cpp  X. Comparison.cpp  Y. MinCostString.cpp  Z. CleanCode.cpp
08 Sheet #5 (Functions)/: A. Add.cpp  B. Print.cpp  C. WonderfulNumber.cpp  D. PrimeFunction.cpp  E. Swap.cpp  F. Equation.cpp  G. MaxandMIN.cpp  H. NTimes.cpp  I. SwappingWithMatrix.cpp  J. Average.cpp  K. ShiftRight.cpp  L. NewArray.cpp  M. DistinctNumbers.cpp  N. ShiftZeros.cpp  O. FiveinOne.cpp  README.md
09 Sheet #6 (Math - Geometry) /: A. Power Of Two.cpp  B. Prime checking.cpp  C. Sum of Range.cpp  D. Xor.cpp  E. Maximum Distinct Numbers.cpp  F. Multiplication of Matrices.cpp  G. Summation of its divisors.cpp  H. GCD.cpp  I. Divisability.cpp  K. Combination and Permutation.cpp  L. Pascal Triangle.cpp  O. Big Add and Multiply.cpp  Q. Product.cpp  README.md  U. Straight Line.cpp
10 Sheet #7 (Recursion) /: A. PrintRecursion.cpp  B. Printfrom1toN.cpp  C. PrintfromNto1.cpp  D. PrintDigitsusingRecursion.cpp  E. BaseConverssion.cpp  F. PrintEvenIndices.cpp  G. Pyramid.cpp  H. InvertedPyramid.cpp  I. CountVowels.cpp  J. Factorial.cpp  K. MaxNumber.cpp  L. Summation.cpp  M. SuffixSum.cpp  N. SumofaMatrix.cpp  O. Fibonacci.cpp  P. Log2.cpp  Q. 3n+1sequence.cpp  R. PalindromeArray.cpp  README.md  S. ArrayAverage.cpp  T. Combination.cpp  U. Knapsack.cpp  V. CreatingExpression1.cpp  W. ReachValue.cpp  X. Themaximumpath-sum.cpp  Y. NumberofWays.cpp  Z. LeftMax.cpp
11 Sheet #8 (General easy) /: A. PalindromesReplace.cpp  B. Watermelon.cpp  C. KokoAndTheTransformation.cpp  D. BearandBigBrother.cpp  E. GeorgeandAccommodation.cpp  F. FoxAndSnake.cpp  G. Magnets.cpp  H. Presents.cpp  I. ColorfulStonesSimplifiedEdition.cpp  J. LuckyDivision.cpp  K. PrimeFibonacci.cpp  L. SerejaandDima.cpp  M. TheNewYearMeetingFriends.cpp  N. Cakeminator.cpp  O. FreeIceCream.cpp  P. PoliceRecruits.cpp  Q. NightattheMuseum.cpp  R. ArrivaloftheGeneral.cpp  README.md  S. GoodNumber.cpp  T. HelpfulMaths.cpp  U. IlyaandBankAccount.cpp  V. Isitrated.cpp  W. MahmoudandLongestUncommonSubsequence.cpp  X. PanoramixsPrediction.cpp  Y. TeamOlympiad.cpp  z. decoding.cpp
12 Sheet #9 (General medium) /: A. DrawingTask.cpp  B. Arpa’s hard exam and Mehrdad’s naive cheat.cpp  C. Dragons.cpp  D. Juicer.cpp  E. Keyboard.cpp  F. Puzzles.cpp  G. Twins.cpp  H. LaunchofCollider.cpp  I. LinelandMail.cpp  J. ShaassandOskols.cpp  K. StarsDrawingEasyEdition.cpp  L. Announcement!.cpp  M. !Palindromes.cpp  N. PumbaaAndApples.cpp  O. YaroslavandPermutations.cpp  P. Calculating Function.cpp  Q. DreamoonandStairs.cpp  R. KseniaandPanScales.cpp  README.md  S. MahmoudandaTriangle.cpp  T. OlesyaandRodion.cpp  U. Tprimes.cpp  V. BalancedRatingChanges.cpp  W. Football.cpp  X. MountainScenery.cpp  Y. Polo the Penguin and Segments.cpp  Z. Fraction.cpp
13 Sheet #10 (General Hard) /: A. PalindromesReplace.cpp  B. Delete from the Left.cpp  C. KokoAndTheTransformation.cpp  D. Hussien and Strings.cpp  E. ConstructTheSum.cpp  F. Marks.cpp  G. SmallestProduct.cpp  H. ChewbaccaandNumber.cpp  I. Coins.cpp  J. HelpVasilisatheWise2.cpp  K. Snacktower.cpp  L. Two Squares.cpp  (+14 more)
(+75 files in other folders)
