cmake_minimum_required(VERSION 4.0)
project(Assiut_University_Training___Newcomers)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assiut_University_Training___Newcomers
        "01 Sheet #1 (Data type - Conditions)/A SayHelloWithCpp.cpp"
        "01 Sheet #1 (Data type - Conditions)/B BasicDataTypes.cpp"
        "01 Sheet #1 (Data type - Conditions)/C SimpleCalculator.cpp"
        "01 Sheet #1 (Data type - Conditions)/D Difference.cpp"
        "01 Sheet #1 (Data type - Conditions)/E AreaofaCircle.cpp"
        "01 Sheet #1 (Data type - Conditions)/F DigitsSummation.cpp"
        "01 Sheet #1 (Data type - Conditions)/G Summationfrom1toN.cpp"
        "01 Sheet #1 (Data type - Conditions)/H Twonumbers.cpp"
        "01 Sheet #1 (Data type - Conditions)/I WelcomeforyouwithConditions.cpp"
        "01 Sheet #1 (Data type - Conditions)/J Multiples.cpp"
        "01 Sheet #1 (Data type - Conditions)/K MaxandMin.cpp"
        "01 Sheet #1 (Data type - Conditions)/L TheBrothers.cpp"
        "01 Sheet #1 (Data type - Conditions)/M CapitalorSmallorDigit.cpp"
        "01 Sheet #1 (Data type - Conditions)/N Char.cpp"
        "01 Sheet #1 (Data type - Conditions)/O Calculator.cpp"
        "01 Sheet #1 (Data type - Conditions)/P Firstdigit!.cpp"
        "01 Sheet #1 (Data type - Conditions)/Q CoordinatesofaPoint.cpp"
        "01 Sheet #1 (Data type - Conditions)/R AgeinDays.cpp"
        "01 Sheet #1 (Data type - Conditions)/S Interval.cpp"
        "01 Sheet #1 (Data type - Conditions)/T SortNumbers.cpp"
        "01 Sheet #1 (Data type - Conditions)/U Floatorint.cpp"
        "01 Sheet #1 (Data type - Conditions)/V Comparison.cpp"
        "01 Sheet #1 (Data type - Conditions)/W MathematicalExpression.cpp"
        "01 Sheet #1 (Data type - Conditions)/X Twointervals.cpp"
        "01 Sheet #1 (Data type - Conditions)/Y Thelast2digits.cpp"
        "01 Sheet #1 (Data type - Conditions)/Z HardCompare.cpp"
        "02 Contest #1/A. Winter Sale.cpp"
        "02 Contest #1/B. Memo and Momo.cpp"
        "02 Contest #1/C. Next Alphabet.cpp"
        "02 Contest #1/D. Ali Baba and Puzzles.cpp"
        "02 Contest #1/E. Interval Sweep.cpp"
        "02 Contest #1/F. Adding Bits.cpp"
        "02 Contest #1/G. Katryoshka.cpp"
        "02 Contest #1/H. Data Type Guessing.cpp"
        "02 Contest #1/I. Lucky Numbers.cpp"
        "03 Sheet #2 (Loops)/A 1toN.cpp"
        "03 Sheet #2 (Loops)/B EvenNumbers.cpp"
        "03 Sheet #2 (Loops)/C Even,Odd,PositiveandNegative.cpp"
        "03 Sheet #2 (Loops)/D FixedPassword.cpp"
        "03 Sheet #2 (Loops)/E Max.cpp"
        "03 Sheet #2 (Loops)/F Multiplicationtable.cpp"
        "03 Sheet #2 (Loops)/G Factorial.cpp"
        "03 Sheet #2 (Loops)/H OnePrime.cpp"
        "03 Sheet #2 (Loops)/I Palindrome.cpp"
        "03 Sheet #2 (Loops)/J Primesfrom1ton.cpp"
        "03 Sheet #2 (Loops)/K Divisors.cpp"
        "03 Sheet #2 (Loops)/L GCD.cpp"
        "03 Sheet #2 (Loops)/M LuckyNumbers1.cpp"
        "03 Sheet #2 (Loops)/N NumbersHistogram.cpp"
        "03 Sheet #2 (Loops)/O Pyramid.cpp"
        "03 Sheet #2 (Loops)/P Shape1.cpp"
        "03 Sheet #2 (Loops)/Q Digits.cpp"
        "03 Sheet #2 (Loops)/R SequenceofNumbersandSum.cpp"
        "03 Sheet #2 (Loops)/S SumofConsecutiveOddNumbers.cpp"
        "03 Sheet #2 (Loops)/T Shape2.cpp"
        "03 Sheet #2 (Loops)/U SomeSums.cpp"
        "03 Sheet #2 (Loops)/V PUM.cpp"
        "03 Sheet #2 (Loops)/W Shape3.cpp"
        "03 Sheet #2 (Loops)/X ConvertToDecimal2.cpp"
        "03 Sheet #2 (Loops)/Y EasyFibonacci.cpp"
        "03 Sheet #2 (Loops)/Z ThreeNumbers.cpp"
        "04 Contest #2/A TimonandPumbaa.cpp"
        "04 Contest #2/B DrawingX.cpp"
        "04 Contest #2/C FindingMinimums.cpp"
        "04 Contest #2/D RangeSum.cpp"
        "04 Contest #2/E HadyRidestheTrain.cpp"
        "04 Contest #2/F BreakNumber.cpp"
        "04 Contest #2/G ConstructtheSum.cpp"
        "04 Contest #2/H SimpleMod.cpp"
        "05 Sheet #3 (Arrays)/1 A Summation.cpp"
        "05 Sheet #3 (Arrays)/10 J LuckyArray.cpp"
        "05 Sheet #3 (Arrays)/11 K SumDigits.cpp"
        "05 Sheet #3 (Arrays)/12 L MaxSubarray.cpp"
        "05 Sheet #3 (Arrays)/13 M ReplaceMinMax.cpp"
        "05 Sheet #3 (Arrays)/14 N CheckCode.cpp"
        "05 Sheet #3 (Arrays)/15 O Fibonacci.cpp"
        "05 Sheet #3 (Arrays)/16 P MinimizeNumber.cpp"
        "05 Sheet #3 (Arrays)/17 Q CountSubarrays.cpp"
        "05 Sheet #3 (Arrays)/18 R Permutationwitharrays.cpp"
        "05 Sheet #3 (Arrays)/19 S SearchInMatrix.cpp"
        "05 Sheet #3 (Arrays)/2 B Searching.cpp"
        "05 Sheet #3 (Arrays)/20 T Matrix.cpp"
        "05 Sheet #3 (Arrays)/21 U IsbasubseqfromA.cpp"
        "05 Sheet #3 (Arrays)/22 V FrequencyArray.cpp"
        "05 Sheet #3 (Arrays)/23 W MirrorArray.cpp"
        "05 Sheet #3 (Arrays)/24 X 8Neighbors.cpp"
        "05 Sheet #3 (Arrays)/25 Y Rangeumquery.cpp"
        "05 Sheet #3 (Arrays)/26 Z BinarySearch.cpp"
        "05 Sheet #3 (Arrays)/3 C Replacement.cpp"
        "05 Sheet #3 (Arrays)/4 D PositionsInArray.cpp"
        "05 Sheet #3 (Arrays)/5 E LowestNumber.cpp"
        "05 Sheet #3 (Arrays)/6 F Reversing.cpp"
        "05 Sheet #3 (Arrays)/7 G PalindromeArray.cpp"
        "05 Sheet #3 (Arrays)/8 H Sorting.cpp"
        "05 Sheet #3 (Arrays)/9 I SmallestPair.cpp"
        "06 Contest #3/A. Square or rectangle.cp"
        "06 Contest #3/B. Reversing.cpp"
        "06 Contest #3/C. Choose Elements.cpp"
        "06 Contest #3/D. Counting Elements.cpp"
        "06 Contest #3/F. Front - End.cpp"
        "06 Contest #3/G. Even Hate Odd.cpp"
        "07 Sheet #4 (Strings)/a.cpp"
        "07 Sheet #4 (Strings)/P. Count Words.cpp"
        "08 Sheet #5 (Functions)/a.cpp"
        "06 Contest #3/B Reversing.cpp"
        "13 Sheet #10 (General Hard) /C-KokoAndTheTransformation.cpp")
